@@ -28,7 +28,7 @@ if (!includeTemplate('gallery.header.tpl')) {
             <table cellspacing="0" cellpadding="0" class="mod_toplight_bg">
               <tr>
                 <td class="mod_toplight_left" align="<?php echo langRight() ?>"></td>
-                <td nowrap class="head" align="<?php echo langLeft() ?>">
+                <td class="head" align="<?php echo langLeft() ?>">
                   &nbsp;<?php echo $gallery->app->galleryTitle ?>&nbsp;
                 </td>
                 <td class="mod_toplight_right" align="<?php echo langLeft() ?>"></td>
